docs/apache-airflow-providers-google/14.0.0/_sources/_api/airflow/providers/google/cloud/operators/bigquery_dts/index.rst.txt
airflow.providers.google.cloud.operators.bigquery_dts
=====================================================

.. py:module:: airflow.providers.google.cloud.operators.bigquery_dts

.. autoapi-nested-parse::

   This module contains Google BigQuery Data Transfer Service operators.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.operators.bigquery_dts.BigQueryCreateDataTransferOperator
   airflow.providers.google.cloud.operators.bigquery_dts.BigQueryDeleteDataTransferConfigOperator
   airflow.providers.google.cloud.operators.bigquery_dts.BigQueryDataTransferServiceStartTransferRunsOperator


Module Contents
---------------

.. py:class:: BigQueryCreateDataTransferOperator(*, transfer_config, project_id = PROVIDE_PROJECT_ID, location = None, authorization_code = None, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id='google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Creates a new data transfer configuration.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryCreateDataTransferOperator`

   :param transfer_config: Data transfer configuration to create.
   :param project_id: The BigQuery project id where the transfer configuration should be
           created. If set to None or missing, the default project_id from the Google Cloud connection
           is used.
   :param location: BigQuery Transfer Service location for regional transfers.
   :param authorization_code: authorization code to use with this transfer configuration.
       This is required if new credentials are needed.
   :param retry: A retry object used to retry requests. If `None` is
       specified, requests will not be retried.
   :param timeout: The amount of time, in seconds, to wait for the request to
       complete. Note that if retry is specified, the timeout applies to each individual
       attempt.
   :param metadata: Additional metadata that is provided to the method.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('transfer_config', 'project_id', 'authorization_code', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: operator_extra_links


   .. py:attribute:: transfer_config


   .. py:attribute:: authorization_code
      :value: None



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: location
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryDeleteDataTransferConfigOperator(*, transfer_config_id, project_id = PROVIDE_PROJECT_ID, location = None, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id='google_cloud_default', impersonation_chain = None, **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Deletes transfer configuration.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryDeleteDataTransferConfigOperator`

   :param transfer_config_id: Id of transfer config to be used.
   :param project_id: The BigQuery project id where the transfer configuration should be
       created. If set to None or missing, the default project_id from the Google Cloud connection is used.
   :param location: BigQuery Transfer Service location for regional transfers.
   :param retry: A retry object used to retry requests. If `None` is
       specified, requests will not be retried.
   :param timeout: The amount of time, in seconds, to wait for the request to
       complete. Note that if retry is specified, the timeout applies to each individual
       attempt.
   :param metadata: Additional metadata that is provided to the method.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('transfer_config_id', 'project_id', 'gcp_conn_id', 'impersonation_chain')



   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: location
      :value: None



   .. py:attribute:: transfer_config_id


   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



.. py:class:: BigQueryDataTransferServiceStartTransferRunsOperator(*, transfer_config_id, project_id = PROVIDE_PROJECT_ID, location = None, requested_time_range = None, requested_run_time = None, retry = DEFAULT, timeout = None, metadata = (), gcp_conn_id='google_cloud_default', impersonation_chain = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.google.cloud.operators.cloud_base.GoogleCloudBaseOperator`


   Start manual transfer runs to be executed now with schedule_time equal to current time.

   The transfer runs can be created for a time range where the run_time is between
   start_time (inclusive) and end_time (exclusive), or for a specific run_time.

   .. seealso::
       For more information on how to use this operator, take a look at the guide:
       :ref:`howto/operator:BigQueryDataTransferServiceStartTransferRunsOperator`

   :param transfer_config_id: Id of transfer config to be used.
   :param requested_time_range: Time range for the transfer runs that should be started.
       If a dict is provided, it must be of the same form as the protobuf
       message `~google.cloud.bigquery_datatransfer_v1.types.TimeRange`
   :param requested_run_time: Specific run_time for a transfer run to be started. The
       requested_run_time must not be in the future.  If a dict is provided, it
       must be of the same form as the protobuf message
       `~google.cloud.bigquery_datatransfer_v1.types.Timestamp`
   :param project_id: The BigQuery project id where the transfer configuration should be
       created.
   :param location: BigQuery Transfer Service location for regional transfers.
   :param retry: A retry object used to retry requests. If `None` is
       specified, requests will not be retried.
   :param timeout: The amount of time, in seconds, to wait for the request to
       complete. Note that if retry is specified, the timeout applies to each individual
       attempt.
   :param metadata: Additional metadata that is provided to the method.
   :param gcp_conn_id: The connection ID used to connect to Google Cloud.
   :param impersonation_chain: Optional service account to impersonate using short-term
       credentials, or chained list of accounts required to get the access_token
       of the last account in the list, which will be impersonated in the request.
       If set as a string, the account must grant the originating account
       the Service Account Token Creator IAM role.
       If set as a sequence, the identities from the list must grant
       Service Account Token Creator IAM role to the directly preceding identity, with first
       account from the list granting this role to the originating account (templated).
   :param deferrable: Run operator in the deferrable mode.


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('transfer_config_id', 'project_id', 'requested_time_range', 'requested_run_time',...



   .. py:attribute:: operator_extra_links


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: location
      :value: None



   .. py:attribute:: transfer_config_id


   .. py:attribute:: requested_time_range
      :value: None



   .. py:attribute:: requested_run_time
      :value: None



   .. py:attribute:: retry


   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: metadata
      :value: ()



   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: deferrable
      :value: True



   .. py:property:: hook
      :type: airflow.providers.google.cloud.hooks.bigquery_dts.BiqQueryDataTransferServiceHook



   .. py:method:: execute(context)

      Derive when creating an operator.

      Context is the same dictionary used as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: execute_completed(context, event)

      Execute after invoked trigger in defer method finishes its job.



   .. py:method:: get_openlineage_facets_on_complete(_)

      Implement _on_complete as we need a run config to extract information.



